# trendshift

./: README.md  setup.cfg
src/trendshift/: trendshift.py
src/trendshift/cache/: pandascache.py
tests/features/: pandascache.feature  trendshift.feature
tests/features/steps/: pandascache.py  trendshift.py
tests/sample/: histdata_EURUSD_M1_202204.csv  histdata_EURUSD_M1_202204_expected.csv
