[metadata]
name = trendshift
version = 0.5.0
author = Jaume Mila Bea
author_email = jaume@westial.com
description = TrendShift is a builder library that appends some trend related cumulative calculation information about a column onto given pandas DataFrame.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/westial/trendshift
project_urls =
    Bug Tracker = https://github.com/westial/trendshift/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
py_modules =
    pandascache
install_requires =
    pandas
python_requires = >=3.6.2

[options.packages.find]
where = src